fixed events page spacing, and footer for all pages

--- a/css/flexbox.css
+++ b/css/flexbox.css
@@ -248,7 +248,9 @@
 .footer{
     background-color:  #6C6D9B;
     padding: 1rem;
+    margin-top: auto;
     width: 100%;
+
 }
 
 .footer nav{
